[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game/Actors/Enemies/BadShip/BadShip.gd" type="Script" id=1]
[ext_resource path="res://Game/Actors/Enemies/BadShip/BadShip-Skin-1.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 24.9192

[sub_resource type="Animation" id=2]

resource_name = "damage"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Image:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 0.25, 0.25 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.570312, 0.082428, 0.082428, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Image:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ), Vector2( 0.55, 0.55 ), Vector2( 0.6, 0.6 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "dead"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Image:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 4, 0.25, 4 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ), Vector2( 0.7, 0.7 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Image:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1080.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Collision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]

resource_name = "show"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Image:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1 ),
"transitions": PoolRealArray( 4, 4, 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.6, 0.6 ), Vector2( 0.8, 0.8 ), Vector2( 0.6, 0.6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Image:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -1080.0, 0.0 ]
}

[node name="BadShip" type="RigidBody2D" groups=[
"Enemies",
]]

input_pickable = false
collision_layer = 3
collision_mask = 3
mode = 0
mass = 2.0
friction = 1.0
bounce = 0.5
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
badship_rotation = -40

[node name="Image" type="Sprite" parent="." index="0"]

scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Collision" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="Anim" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/damage = SubResource( 2 )
anims/dead = SubResource( 3 )
anims/show = SubResource( 4 )
blend_times = [  ]

[node name="LimitLeft" type="Position2D" parent="." index="3"]

position = Vector2( -300, 0 )
_sections_unfolded = [ "Transform" ]

[node name="LimitRight" type="Position2D" parent="." index="4"]

[node name="TimeToDead" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[node name="TimeToFire" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="body_entered" from="." to="." method="_on_BadShip_body_entered"]

[connection signal="timeout" from="TimeToDead" to="." method="_on_TimeToDead_timeout"]

[connection signal="timeout" from="TimeToFire" to="." method="_on_TimeToFire_timeout"]


